vpc.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Provision VPC resources for Demo",

  "Parameters":{
    "vpcCIDR":{"Type":"String"},
    "publicSubnetCIDR0":{"Type":"String"},
    "privateSubnetCIDR0":{"Type":"String"},
    "dbSubnetCIDR0":{"Type":"String"},
    "publicSubnetCIDR1":{"Type":"String"},
    "privateSubnetCIDR1":{"Type":"String"},
    "dbSubnetCIDR1":{"Type":"String"},
    "longClientName":{"Type":"String"},
    "shortClientName":{"Type":"String"}
  },
  "Resources":{
    "foundationsVPC":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Ref":"vpcCIDR"},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",[{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "internetGateway":{
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["igw",{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "attachInternetGateway":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "Properties":{
        "InternetGatewayId":{"Ref":"internetGateway"},
        "VpcId":{"Ref":"foundationsVPC"}
      }
    },
    "publicRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["public-route",{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "privateRouteTable0":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private-route-az0",{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "privateRouteTable1":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private-route-az1",{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "dbRouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["db-route",{"Ref":"shortClientName"},{"Ref":"AWS::Region"},"vpc"]]}}
        ]
      }
    },
    "publicRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":"internetGateway",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"publicRouteTable"},
        "GatewayId":{"Ref":"internetGateway"}
      }
    },
    "privateRoute0":{
      "DependsOn":"NATGateway0",
      "Type":"AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"privateRouteTable0"},
        "NatGatewayId":{"Ref":"NATGateway0"}
      }
    },
    "privateRoute1":{
      "DependsOn":"NATGateway1",
      "Type":"AWS::EC2::Route",
      "Properties":{
        "DestinationCidrBlock":"0.0.0.0/0",
        "RouteTableId":{"Ref":"privateRouteTable1"},
        "NatGatewayId":{"Ref":"NATGateway1"}
      }
    },
    "publicSubnet0":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["0",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"publicSubnetCIDR0"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["public",{"Fn::Select":["0",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "publicSubnet1":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["1",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"publicSubnetCIDR1"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["public",{"Fn::Select":["1",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "privateSubnet0":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["0",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"privateSubnetCIDR0"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private",{"Fn::Select":["0",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "privateSubnet1":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["1",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"privateSubnetCIDR1"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["private",{"Fn::Select":["1",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "dbSubnet0":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["0",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"dbSubnetCIDR0"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["db",{"Fn::Select":["0",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "dbSubnet1":{
    "Type":"AWS::EC2::Subnet",
      "Properties":{
        "VpcId":{"Ref":"foundationsVPC"},
        "AvailabilityZone":{"Fn::Select":["1",{"Fn::GetAZs":""}]},
        "CidrBlock":{"Ref":"dbSubnetCIDR1"},
        "MapPublicIpOnLaunch":false,
        "Tags":[
          {"Key":"Name","Value":{"Fn::Join":["-",["db",{"Fn::Select":["1",{"Fn::GetAZs":""}]},{"Ref":"shortClientName"},"subnet"]]}}
        ]
      }
    },
    "publicSubnet0RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"publicSubnet0"},
        "RouteTableId":{"Ref":"publicRouteTable"}
      }
    },
    "publicSubnet1RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"publicSubnet1"},
        "RouteTableId":{"Ref":"publicRouteTable"}
      }
    },
    "privateSubnet0RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"privateSubnet0"},
        "RouteTableId":{"Ref":"privateRouteTable0"}
      }
    },
    "privateSubnet1RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"privateSubnet1"},
        "RouteTableId":{"Ref":"privateRouteTable1"}
      }
    },
    "dbSubnet0RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"dbSubnet0"},
        "RouteTableId":{"Ref":"dbRouteTable"}
      }
    },
    "dbSubnet1RouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
        "SubnetId":{"Ref":"dbSubnet1"},
        "RouteTableId":{"Ref":"dbRouteTable"}
      }
    },
    "NATGateway0":{
      "DependsOn":"internetGateway",
      "Type":"AWS::EC2::NatGateway",
      "Properties":{
        "AllocationId":{"Fn::GetAtt":["NATElasticIPAddress0","AllocationId"]},
        "SubnetId":{"Ref":"publicSubnet0"}
      }
    },
    "NATGateway1":{
      "DependsOn":"internetGateway",
      "Type":"AWS::EC2::NatGateway",
      "Properties":{
        "AllocationId":{"Fn::GetAtt":["NATElasticIPAddress1","AllocationId"]},
        "SubnetId":{"Ref":"publicSubnet1"}
      }
    },
    "NATElasticIPAddress0":{
      "Type":"AWS::EC2::EIP",
      "Properties":{
        "Domain":"vpc"
      }
    },
    "NATElasticIPAddress1":{
      "Type":"AWS::EC2::EIP",
      "Properties":{
        "Domain":"vpc"
      }
    }
  },
  "Outputs":{
    "vpcId":{
      "Description":"ID of the VPC",
      "Value":{"Ref":"foundationsVPC"}
    },
    "publicRouteId":{
      "Value":{"Ref":"publicRouteTable"}
    },
    "privateRoute0Id":{
      "Value":{"Ref":"privateRouteTable0"}
    },
    "privateRoute1Id":{
      "Value":{"Ref":"privateRouteTable1"}
    },
    "dbRouteId":{
      "Value":{"Ref":"dbRouteTable"}
    },
    "publicSubnet0Id":{
      "Value":{"Ref":"publicSubnet0"}
    },
    "publicSubnet1Id":{
      "Value":{"Ref":"publicSubnet1"}
    },
    "privateSubnet0Id":{
      "Value":{"Ref":"privateSubnet0"}
    },
    "privateSubnet1Id":{
      "Value":{"Ref":"privateSubnet1"}
    },
    "dbSubnet0Id":{
      "Value":{"Ref":"dbSubnet0"}
    },
    "dbSubnet1Id":{
      "Value":{"Ref":"dbSubnet1"}
    }
  }
}
